--- a/consulting_cryptocurrency.html
+++ b/consulting_cryptocurrency.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Js -->
@@ -23,6 +24,52 @@
     <header>
         <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
         <a class="link" href="http://bitpos.io/" target="_blank">Bitpos 거래소 바로가기</a>
+        <div class="open-menu">
+            <div class="head">
+            </div> 
+            <div class="mu-list">
+                <div class="mu-box">
+                    <p>회사소개</p>
+                    <ul>
+                        <li><a href="about_overview.html">회사개요</a></li>
+                        <li><a href="about_history.html">회사연혁</a></li>
+                        <li><a href="about_greeting.html">CEO 인사말</a></li>
+                        <li><a href="about_organization_chart.html">조직도</a></li>
+                        <li><a href="about_location.html">오시는 길</a></li>
+                    </ul>
+                </div> <!-- end mu-box -->
+                <div class="mu-box">
+                    <p>사업분야</p>
+                    <ul>
+                        <li><a href="business_block_chain.html">블록체인</a></li>
+                        <li><a href="business_exchange.html">암호화폐거래소</a></li>
+                        <li><a href="business_EUR_license.html">코인 EUR 라이센스</a></li>
+                        <li><a href="business_swiss_FINMA_consulting.html">Swiss FINMA Consulting</a></li>
+                        <li><a href="business_shopping_mall.html">쇼핑몰</a></li>
+                        <li><a href="business_education.html">LMS & LCMS</a></li>
+                        <li><a href="http://azilowon.com/" target="_blank">Coin White Paper</a></li>
+                    </ul>
+                </div> <!-- end mu-box -->
+                <div class="mu-box">
+                    <p>커뮤니티</p>
+                    <ul>
+                        <li><a href="community_news.html">뉴스</a></li>
+                        <li><a href="community_notice.html">공지사항</a></li>
+                        <li><a href="community_data_room.html">자료실</a></li>
+                        <li><a href="community_blog.html">BLOG</a></li>
+                    </ul>
+                </div> <!-- end mu-box -->
+                <div class="mu-box">
+                    <p>컨설팅</p>
+                    <ul>
+                        <li><a href="consulting_cryptocurrency.html">코인(암호화폐)</a></li>
+                        <li><a href="consulting_exchange.html">Exchange</a></li>
+                        <li><a href="consulting_wallet.html">전자지갑</a></li>
+                        <li><a href="consulting_platform.html">통합플랫폼</a></li>
+                    </ul>
+                </div> <!-- end mu-box -->
+            </div> <!-- end mu-list -->
+        </div> <!-- end open-menu -->
         <nav>
             <div class="cm-menu">
                 <a class="depth1" href="#">회사소개</a>
@@ -73,10 +120,43 @@
                 </div> <!-- end depth2 -->
             </div> <!-- end cm-menu -->
         </nav>
+        <div class="m-menu">
+            <div class="col">
+                <div class="con">
+                    <div class="bar top"></div>
+                    <div class="bar middle"></div>
+                    <div class="bar bottom"></div>
+                </div>
+            </div> <!-- end col -->
+        </div>
         <input class="contact" type="button" value="1 : 1 문의하기">
     </header>
     <div id="consulting" class="layout">
         <div class="sub-visual">
+            <div class="location-menu">
+                <div class="depth1 selbox">
+                    <div class="head">
+                        <p>컨설팅</p>
+                    </div>
+                    <ul>
+                        <li><a href="about_overview.html">회사소개</a></li>
+                        <li><a href="business_block_chain.html">사업분야</a></li>
+                        <li><a href="community_news.html">커뮤니티</a></li>
+                        <li><a href="consulting_exchange.html">컨설팅</a></li>
+                    </ul>
+                </div> <!-- end depth1-->
+                <div class="depth2 selbox">
+                    <div class="head">
+                        <p>코인(암호화폐)</p>
+                    </div>
+                    <ul>
+                        <li><a href="consulting_cryptocurrency.html">코인(암호화폐)</a></li>
+                        <li><a href="consulting_exchange.html">Exchange</a></li>
+                        <li><a href="consulting_wallet.html">전자지갑</a></li>
+                        <li><a href="consulting_platform.html">통합플랫폼</a></li>
+                    </ul>
+                </div> <!-- end depth2-->
+            </div> <!-- end location-menu -->
         </div> <!-- end sub-visual -->
         <div class="container">
             <div class="tit-box">
@@ -107,91 +187,93 @@
                         </ul>
                     </div> <!-- end sc-info -->
                 </div> <!-- end token -->
-                <table>
-                    <colgroup>
-                    <col width="15%">
-                    <col width="10%">
-                    <col width="10%">
-                    <col width="10%">
-                    <col width="15%">
-                    <col width="40%">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th colspan="2">FINAL VERSION</th>
-                            <th>LOCK-UP</th>
-                            <th>VESTING PERIOD</th>
-                            <th>COMMENTS</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>ICO</td>
-                            <td>16.00%</td>
-                            <td>160,000,000</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <td>Private Sale</td>
-                            <td>4.00%</td>
-                            <td>40,000,000</td>
-                            <td>-</td>
-                            <td>Released 30% at the end of ICO, and then 5% each month</td>
-                            <td>Private Sale investors will receive 30% of the tokens bought in private sale at the end of the ICO. These tokens are free and they can sell them. Then they will continue to receive tokens - 5% per month - until they have received all tokens bought.</td>
-                        </tr>
-                        <tr>
-                            <td>Company Reserve</td>
-                            <td>20.00%</td>
-                            <td>200,000,000</td>
-                            <td>6 Months</td>
-                            <td>20% per quarter</td>
-                            <td>For 6 months these tokens will be blocked. After 6 months from the ICO, 20% of these will be unlocked and then each quarter of the remaining 20% will be unblocked and so on until the end.</td>
-                        </tr>
-                        <tr>
-                            <td>Affiliate Marketing</td>
-                            <td>20.00%</td>
-                            <td>200,000,000</td>
-                            <td>-</td>
-                            <td>10% per month</td>
-                            <td>The company has a reserve for affiliate marketing campaigns. Each month 10% of this reserve will be unlocked, so the company will have 10% in the beginning and then un altro 10% after each month. It means that after 10 months these tokens will be all unlocked.</td>
-                        </tr>
-                        <tr>
-                            <td>Cashback</td>
-                            <td>20.00%</td>
-                            <td>200,000,000</td>
-                            <td>-</td>
-                            <td>10% per month</td>
-                            <td>The company has a reserve for cashback campaigns. Each month 10% of this reserve will be unlocked, so the company will have 10% in the beginning and then un altro 10% after each month. It means that after 10 months these tokens will be all unlocked.</td>
-                        </tr>
-                        <tr>
-                            <td>Strategic Partners</td>
-                            <td>15.00%</td>
-                            <td>150,000,000</td>
-                            <td>-</td>
-                            <td>10% per month</td>
-                            <td>The company has a reserve for closing deals with strategic partners. Each month 10% of this reserve will be unlocked, so the company will have 10% in the beginning and then un altro 10% after each month. It means that after 10 months these tokens will be all unlocked.</td>
-                        </tr>
-                        <tr>
-                            <td>Advisors&Founders	</td>
-                            <td>5.00%</td>
-                            <td>50,000,000</td>
-                            <td>-</td>
-                            <td>Released 30% at the end of ICO, and then 5% each month</td>
-                            <td>Founders, Team and Advisors will receive 30% of the tokens at the end of the ICO. These tokens are free and they can sell them. Then they will continue to receive tokens - 5% per month - until they have received all tokens.</td>
-                        </tr>
-                        <tr>
-                            <td>Total</td>
-                            <td>100.00%</td>
-                            <td>1,000,000,000</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="t-wrap">
+                    <table style="table-layout: fixed;">
+                        <colgroup>
+                        <col width="15%">
+                        <col width="10%">
+                        <col width="10%">
+                        <col width="10%">
+                        <col width="15%">
+                        <col width="40%">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th colspan="2">FINAL VERSION</th>
+                                <th>LOCK-UP</th>
+                                <th>VESTING PERIOD</th>
+                                <th>COMMENTS</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>ICO</td>
+                                <td>16.00%</td>
+                                <td>160,000,000</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>Private Sale</td>
+                                <td>4.00%</td>
+                                <td>40,000,000</td>
+                                <td>-</td>
+                                <td>Released 30% at the end of ICO, and then 5% each month</td>
+                                <td>Private Sale investors will receive 30% of the tokens bought in private sale at the end of the ICO. These tokens are free and they can sell them. Then they will continue to receive tokens - 5% per month - until they have received all tokens bought.</td>
+                            </tr>
+                            <tr>
+                                <td>Company Reserve</td>
+                                <td>20.00%</td>
+                                <td>200,000,000</td>
+                                <td>6 Months</td>
+                                <td>20% per quarter</td>
+                                <td>For 6 months these tokens will be blocked. After 6 months from the ICO, 20% of these will be unlocked and then each quarter of the remaining 20% will be unblocked and so on until the end.</td>
+                            </tr>
+                            <tr>
+                                <td>Affiliate Marketing</td>
+                                <td>20.00%</td>
+                                <td>200,000,000</td>
+                                <td>-</td>
+                                <td>10% per month</td>
+                                <td>The company has a reserve for affiliate marketing campaigns. Each month 10% of this reserve will be unlocked, so the company will have 10% in the beginning and then un altro 10% after each month. It means that after 10 months these tokens will be all unlocked.</td>
+                            </tr>
+                            <tr>
+                                <td>Cashback</td>
+                                <td>20.00%</td>
+                                <td>200,000,000</td>
+                                <td>-</td>
+                                <td>10% per month</td>
+                                <td>The company has a reserve for cashback campaigns. Each month 10% of this reserve will be unlocked, so the company will have 10% in the beginning and then un altro 10% after each month. It means that after 10 months these tokens will be all unlocked.</td>
+                            </tr>
+                            <tr>
+                                <td>Strategic Partners</td>
+                                <td>15.00%</td>
+                                <td>150,000,000</td>
+                                <td>-</td>
+                                <td>10% per month</td>
+                                <td>The company has a reserve for closing deals with strategic partners. Each month 10% of this reserve will be unlocked, so the company will have 10% in the beginning and then un altro 10% after each month. It means that after 10 months these tokens will be all unlocked.</td>
+                            </tr>
+                            <tr>
+                                <td>Advisors&Founders	</td>
+                                <td>5.00%</td>
+                                <td>50,000,000</td>
+                                <td>-</td>
+                                <td>Released 30% at the end of ICO, and then 5% each month</td>
+                                <td>Founders, Team and Advisors will receive 30% of the tokens at the end of the ICO. These tokens are free and they can sell them. Then they will continue to receive tokens - 5% per month - until they have received all tokens.</td>
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                <td>100.00%</td>
+                                <td>1,000,000,000</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>-</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div> <!-- end wrap -->
             </div> <!-- end content -->
         </div> <!-- end container -->
     </div> <!-- end business -->
@@ -231,13 +313,18 @@
                     <li><a href="">오시는길</a></li>
                 </ul>
             </div> <!-- end foot-cate -->
+            <div class="m-foot-cate">
+                <ul>
+                    <li><a href="#">이용약관</a></li>
+                    <li><a href="#">개인정보처리방침</a></li>
+                    <li><a href="#">오시는길</a></li>
+                </ul>
+            </div> <!-- end m-foot-cate -->
             <div class="info-area container">
                 <div class="company-info">
-                    <p class="cm-txt">회사명 (주) 지식인 <span>|</span> 주소 서울특별시 구로구 도림천로 448 예성유토피아 201동 603호</p>
-                    <p class="cm-txt">대표 정정수<span>|</span> 사업자등록번호 119-86-32227 <span>|</span>02-867-8118</p>
-                    <p class="cm-txt">통신판매신고번호 제 2019-서울강남-01540호 <span>|</span> 원격평생교육번호 제 760호
-                        <span>|</span>벤처기업확인번호 제
-                        2018108472호
+                    <p class="cm-txt">회사명 (주) 지식인<span>|</span>주소 서울특별시 구로구 도림천로 448 예성유토피아 201동 603호</p>
+                    <p class="cm-txt">대표 정정수<span>|</span>사업자등록번호 119-86-32227 <span>|</span>02-867-8118</p>
+                    <p class="cm-txt">통신판매신고번호 제 2019-서울강남-01540호<span>|</span> 원격평생교육번호 제 760호<span>|</span>벤처기업확인번호 제2018108472호
                     </p>
                     <p class="copyright">&copy; 2010 JISIGIN ALL RIGHTS REVERED.</p>
                 </div> <!-- end company-info -->
