--- a/about_overview.html
+++ b/about_overview.html
@@ -151,7 +151,7 @@
                         <li><a href="about_overview.html">회사소개</a></li>
                         <li><a href="business_block_chain.html">사업분야</a></li>
                         <li><a href="community_news.html">커뮤니티</a></li>
-                        <li><a href="consulting_exchange.html">컨설팅</a></li>
+                        <li><a href="consulting_cryptocurrency.html">컨설팅</a></li>
                     </ul>
                 </div> <!-- end depth1-->
                 <div class="depth2 selbox">
